添加注册逻辑

--- a/app/account/oauth2/static/register.html
+++ b/app/account/oauth2/static/register.html
@@ -11,8 +11,8 @@
 
 <body>
 <div class="container">
-    <h1>Login In</h1>
-    <form action="/account/oauth/login?client_id=la4rDuxPhBoIDyAq&response_type=code&redirect_uri=http://auth.mxchip.com/callback&state=9e76f36043cc927475d3de381019418e7471cbdb47c00266"
+    <h1>Register</h1>
+    <form action="/account/oauth/register?client_id=la4rDuxPhBoIDyAq&response_type=code&redirect_uri=http://auth.mxchip.com/callback&state=9e76f36043cc927475d3de381019418e7471cbdb47c00266"
           method="POST">
         <div class="form-group">
             <label for="uname">User Name</label>
@@ -22,12 +22,12 @@
             <label for="passwd">Password</label>
             <input type="password" class="form-control" name="passwd" placeholder="Please enter your password">
         </div>
-        <button type="submit" class="btn btn-success">Login</button>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" name="phone" placeholder="Please enter your phone number">
+        </div>
+        <button type="submit" class="btn btn-success">Register</button>
     </form>
-    <button type="button"
-            onclick="location.href='/account/static/register?client_id=la4rDuxPhBoIDyAq&response_type=code&redirect_uri=http://auth.mxchip.com/callback&state=9e76f36043cc927475d3de381019418e7471cbdb47c00266'"
-            class="btn btn-success">Go Register
-    </button>
 </div>
 </body>
 
